--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,9 @@
                     <h1>Contact</h1>
                     <div id="emailModal" class="emailModal">
                         <div class="emailModalContent">
-                            <p>Email</p>
+                            <div class="titleEmailWrapper">
+                                <p class="titleEmail">Email</p>
+                            </div>
                             <p>If you have an email client installed on your device, you can click on the "Send an email" button.<br> If you don't, simply send an email to this address:</p>
                             <p class="emailModalText">adnan@aridan.net</p>
                             <div class="buttonsEmail">
