testing emoji rendering

--- a/projects.html
+++ b/projects.html
@@ -32,7 +32,7 @@
                 </div>
             </div>
             <div class="navWrapper">
-                <a class="navButton" href="index.html">🏠 Home</a>
+                <a class="navButton" href="index.html"><span class="emoji">🏠</span> Home</a>
                 <a class="navButton" href="contact.html">💬 Contact</a>
                 <a class="navButton" href="experiences.html">🧠 Experiences</a>
                 <a class="navButton activeChoice" href="projects.html">🛠️ Projects</a>
