--- a/projects.html
+++ b/projects.html
@@ -33,18 +33,18 @@
             </div>
             <div class="navWrapper">
                 <a class="navButton" href="index.html"><span class="emoji">🏠</span> Home</a>
-                <a class="navButton" href="contact.html">💬 Contact</a>
-                <a class="navButton" href="experiences.html">🧠 Experiences</a>
-                <a class="navButton activeChoice" href="projects.html">🛠️ Projects</a>
+                <a class="navButton" href="contact.html"><span class="emoji">💬</span> Contact</a>
+                <a class="navButton" href="experiences.html"><span class="emoji">🧠</span> Experiences</a>
+                <a class="navButton activeChoice" href="projects.html"><span class="emoji">🛠️</span> Projects</a>
             </div>
             <div class="navWrapperMobile">
                 <button onclick="toggleMenu()" class="navButton" >＝ Menu</button>
             </div>
             <div class="mobileMenu" id="mobileMenuID">
-                <a class="navButton" href="index.html">🏠 Home</a>
-                <a class="navButton" href="contact.html">💬 Contact</a>
-                <a class="navButton" href="experiences.html">🧠 Experiences</a>
-                <a class="navButton activeChoice" href="projects.html">🛠️ Projects</a>
+                <a class="navButton" href="index.html"><span class="emoji">🏠</span> Home</a>
+                <a class="navButton" href="contact.html"><span class="emoji">💬</span> Contact</a>
+                <a class="navButton" href="experiences.html"><span class="emoji">🧠</span> Experiences</a>
+                <a class="navButton activeChoice" href="projects.html"><span class="emoji">🛠️</span> Projects</a>
             </div>
         </nav>
     </header>
