--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,7 @@
         <nav>
             <div class="langWrapper">
                 <div class="dropdown">
-                    <button onclick="toggleLangDrop()" class="dropButton lang" id="dropButtonID">🌐 Language</button>
+                    <button onclick="toggleLangDrop()" class="dropButton lang" id="dropButtonID"><span class="emoji">🌐</span> Language</button>
                     <div id="langDrop" class="dropdownContent">
                         <a href="projects.html">🇺🇸/🏴󠁧🇬🇧 English</a>
                         <a href="sv/projects.html">🇸🇪 Svenska (Swedish)</a>
