--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,7 @@
         <nav>
             <div class="langWrapper">
                 <div class="dropdown">
-                    <button onclick="toggleLangDrop()" class="dropButton lang" id="dropButtonID"><img draggable="false" class="emoji" alt="🌐" src="src/images/emojis/globe.svg"> Language</button>
+                    <button onclick="toggleLangDrop()" class="dropButton lang" id="dropButtonID"><img draggable="false" class="emoji" alt="" src="src/images/emojis/globe.svg"> Language</button>
                     <div id="langDrop" class="dropdownContent">
                         <a href="projects.html">🇺🇸/🏴󠁧🇬🇧 English</a>
                         <a href="sv/projects.html">🇸🇪 Svenska (Swedish)</a>
@@ -32,19 +32,19 @@
                 </div>
             </div>
             <div class="navWrapper">
-                <a class="navButton" href="index.html"><img draggable="false" class="emoji" alt="🏠" src="src/images/emojis/house.svg"> Home</a>
-                <a class="navButton" href="contact.html"><img draggable="false" class="emoji" alt="💬" src="src/images/emojis/speak.svg"> Contact</a>
-                <a class="navButton" href="experiences.html"><img draggable="false" class="emoji" alt="🧠" src="src/images/emojis/brain.svg"> Experiences</a>
-                <a class="navButton activeChoice" href="projects.html"><img draggable="false" class="emoji" alt="🛠️" src="src/images/emojis/tools.svg"> Projects</a>
+                <a class="navButton" href="index.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/house.svg"> Home</a>
+                <a class="navButton" href="contact.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/speak.svg"> Contact</a>
+                <a class="navButton" href="experiences.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/brain.svg"> Experiences</a>
+                <a class="navButton activeChoice" href="projects.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/tools.svg"> Projects</a>
             </div>
             <div class="navWrapperMobile">
                 <button onclick="toggleMenu()" class="navButton" >＝ Menu</button>
             </div>
             <div class="mobileMenu" id="mobileMenuID">
-                <a class="navButton" href="index.html"><img draggable="false" class="emoji" alt="🏠" src="src/images/emojis/house.svg"> Home</a>
-                <a class="navButton" href="contact.html"><img draggable="false" class="emoji" alt="💬" src="src/images/emojis/speak.svg"> Contact</a>
-                <a class="navButton" href="experiences.html"><img draggable="false" class="emoji" alt="🧠" src="src/images/emojis/brain.svg"> Experiences</a>
-                <a class="navButton activeChoice" href="projects.html"><img draggable="false" class="emoji" alt="🛠️" src="src/images/emojis/tools.svg"> Projects</a>
+                <a class="navButton" href="index.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/house.svg"> Home</a>
+                <a class="navButton" href="contact.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/speak.svg"> Contact</a>
+                <a class="navButton" href="experiences.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/brain.svg"> Experiences</a>
+                <a class="navButton activeChoice" href="projects.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/tools.svg"> Projects</a>
             </div>
         </nav>
     </header>
