Projects page now uses local icons

--- a/projects.html
+++ b/projects.html
@@ -3,8 +3,6 @@
 
 <head>
     <meta charset="utf-8">
-    <script src="src/scripts/twimojiFix.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@twemoji/api@latest/dist/twemoji.min.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#710a97">
     <title>Projects — actuallyaridan</title>
@@ -60,10 +58,10 @@
                             <p class="projectDesc">This is a website that has all my social media links, all my experiences and similar listed. <br>I learned a lot during this project, mainly how to make websites look nice.</p>
                             <div>
                                 <p class="projectStatus WIP">Work in progress</p>
-                                <p class="projectLink">🔗 <a href="https://aridan.net">aridan.net</a></p>
-                                <p class="projectLink">🔗 <a href="https://github.com/actuallyaridan/aridan.net">GitHub</a></p>
-                                <p class="projectLearned">🧑‍🏫 HTML, CSS, JavaScript</p>
-                                <p class="projectLegal">🧑‍⚖️ Unlicensed</p>
+                                <p class="projectLink"><img draggable="false" class="emoji" alt="" src="src/images/emojis/link.svg"> <a href="https://aridan.net">aridan.net</a></p>
+                                <p class="projectLink"><img draggable="false" class="emoji" alt="" src="src/images/emojis/link.svg"> <a href="https://github.com/actuallyaridan/aridan.net">GitHub</a></p>
+                                <p class="projectLearned"><img draggable="false" class="emoji" alt="" src="src/images/emojis/teacher.svg"> HTML, CSS, JavaScript</p>
+                                <p class="projectLegal"><img draggable="false" class="emoji" alt="" src="src/images/emojis/judge.svg"> Unlicensed</p>
                             </div>
                         </div>
                         <div class="project">
@@ -71,7 +69,7 @@
                             <p class="projectDesc">I have modified this iPod with a transparent click wheel and button along with a transparent faceplate. <br>I've also installed a larger battery and replaced its hard drive with a microSD card.</p>
                             <div>
                                 <p class="projectStatus WIP">Work in progress</p>
-                                <p class="projectLearned">🧑‍🏫 Electronics modification</p>
+                                <p class="projectLearned"><img draggable="false" class="emoji" alt="" src="src/images/emojis/teacher.svg"> Electronics modification</p>
                             </div>
                         </div>
                         <div class="project">
@@ -79,7 +77,7 @@
                             <p class="projectDesc">I have repaired this iPod by replacing its click wheel. <br>I've also upgraded it by replacing its hard drive with a Compact Flash card and I installed a new battery too.</p>
                             <div>
                                 <p class="projectStatus WIP">Work in progress</p>
-                                <p class="projectLearned">🧑‍🏫 Electronics modification</p>
+                                <p class="projectLearned"><img draggable="false" class="emoji" alt="" src="src/images/emojis/teacher.svg"> Electronics modification</p>
                             </div>
                         </div>
                         <div class="project">
@@ -87,7 +85,7 @@
                             <p class="projectDesc">I've also upgraded this iPod by replacing its hard drive with a Compact Flash card and I installed a new battery too.</p>
                             <div>
                                 <p class="projectStatus completed">Completed</p>
-                                <p class="projectLearned">🧑‍🏫 Electronics modification</p>
+                                <p class="projectLearned"><img draggable="false" class="emoji" alt="" src="src/images/emojis/teacher.svg"> Electronics modification</p>
                             </div>
                         </div>
                         <div class="project">
@@ -95,7 +93,7 @@
                             <p class="projectDesc">Hackintoshing is the act of installing macOS on non-Apple hardware. <br>I did this as a hobby project and I learned a lot about Apple software. It was a fun project and it still works to this day!</p>
                             <div>
                                 <p class="projectStatus completed">Completed</p>
-                                <p class="projectLearned">🧑‍🏫 Software</p>
+                                <p class="projectLearned"><img draggable="false" class="emoji" alt="" src="src/images/emojis/teacher.svg"> Software</p>
                             </div>
                         </div>
                     </div>
