--- a/projects.html
+++ b/projects.html
@@ -3,8 +3,6 @@
 
 <head>
     <meta charset="utf-8">
-    <script src="src/scripts/twimojiFix.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@twemoji/api@latest/dist/twemoji.min.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#710a97">
     <title>Projects — actuallyaridan</title>
@@ -54,7 +52,7 @@
                 <div>
                     <h1>Projects</h1>
                     <div>
-                        <p class="subTitle">I have a bunch of projects that I work on now and then. <br>Some of them are technical projects and some others have to do with software and/or websites. <br>Why don't you check them out? I'm sure you'll like them! I had fun making them at least! 😊</p>
+                        <p class="subTitle">I have a bunch of projects that I work on now and then. <br>Some of them are technical projects and some others have to do with software and/or websites. <br>Why don't you check them out? I'm sure you'll like them! I had fun making them at least! <img draggable="false" class="emoji" alt="" src="src/images/emojis/happy.svg"></p>
                         <div class="project">
                             <p class="projectName">This website (aridan.net)</p>
                             <p class="projectDesc">This is a website that has all my social media links, all my experiences and similar listed. <br>I learned a lot during this project, mainly how to make websites look nice.</p>
