--- a/projects.html
+++ b/projects.html
@@ -24,8 +24,8 @@
                 <div class="dropdown">
                     <button onclick="toggleLangDrop()" class="dropButton lang" id="dropButtonID"><img draggable="false" class="emoji" alt="" src="src/images/emojis/globe.svg"> Language</button>
                     <div id="langDrop" class="dropdownContent">
-                        <a href="projects.html">🇺🇸/🏴󠁧🇬🇧 English</a>
-                        <a href="sv/projects.html">🇸🇪 Svenska (Swedish)</a>
+                        <a href="projects.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/usa.svg">/<img draggable="false" class="emoji" alt="" src="src/images/emojis/uk.svg"> English</a>
+                        <a href="sv/projects.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/sweden.svg"> Svenska (Swedish)</a>
                     </div>
                 </div>
             </div>
