--- a/experiences.html
+++ b/experiences.html
@@ -25,27 +25,27 @@
         <nav>
             <div class="langWrapper">
                 <div class="dropdown">
-                    <button onclick="toggleLangDrop()" class="dropButton lang" id="dropButtonID">🌐 Language</button>
+                    <button onclick="toggleLangDrop()" class="dropButton lang" id="dropButtonID"><img draggable="false" class="emoji" alt="" src="src/images/emojis/globe.svg"> Language</button>
                     <div id="langDrop" class="dropdownContent">
-                        <a href="experiences.html">🇺🇸/🇬🇧 English</a>
-                        <a href="sv/experiences.html">🇸🇪 Svenska (Swedish)</a>
+                        <a href="experiences.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/usa.svg">/<img draggable="false" class="emoji" alt="" src="src/images/emojis/uk.svg"> English</a>
+                        <a href="sv/experiences.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/sweden.svg"> Svenska (Swedish)</a>
                     </div>
                 </div>
             </div>
             <div class="navWrapper">
-                <a class="navButton" href="index.html">🏠 Home</a>
-                <a class="navButton" href="contact.html">💬 Contact</a>
-                <a class="navButton activeChoice" href="experiences.html">🧠 Experiences</a>
-                <a class="navButton" href="projects.html">🛠️ Projects</a>
+                <a class="navButton" href="index.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/house.svg"> Home</a>
+                <a class="navButton" href="contact.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/speak.svg"> Contact</a>
+                <a class="navButton activeChoice" href="experiences.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/brain.svg"> Experiences</a>
+                <a class="navButton" href="projects.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/tools.svg"> Projects</a>
             </div>
             <div class="navWrapperMobile">
                 <button onclick="toggleMenu()" class="navButton" >＝ Menu</button>
             </div>
             <div class="mobileMenu" id="mobileMenuID">
-                <a class="navButton" href="index.html">🏠 Home</a>
-                <a class="navButton" href="contact.html">💬 Contact</a>
-                <a class="navButton activeChoice" href="experiences.html">🧠 Experiences</a>
-                <a class="navButton" href="projects.html">🛠️ Projects</a>
+                <a class="navButton" href="index.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/house.svg"> Home</a>
+                <a class="navButton" href="contact.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/speak.svg"> Contact</a>
+                <a class="navButton activeChoice" href="experiences.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/brain.svg"> Experiences</a>
+                <a class="navButton" href="projects.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/tools.svg"> Projects</a>
             </div>
         </nav>
     </header>
