--- a/projects.html
+++ b/projects.html
@@ -61,7 +61,7 @@
                                 <p class="projectLink"><img draggable="false" class="emoji" alt="" src="src/images/emojis/link.svg"> <a href="https://aridan.net">aridan.net</a></p>
                                 <p class="projectLink"><img draggable="false" class="emoji" alt="" src="src/images/emojis/link.svg"> <a href="https://github.com/actuallyaridan/aridan.net">GitHub</a></p>
                                 <p class="projectLearned"><img draggable="false" class="emoji" alt="" src="src/images/emojis/teacher.svg"> HTML, CSS, JavaScript</p>
-                                <p class="projectLegal"><img draggable="false" class="emoji" alt="" src="src/images/emojis/judge.svg"> Unlicensed</p>
+                                <p class="projectLegal"><img draggable="false" class="emoji" alt="" src="src/images/emojis/judge.svg"> MIT license</p>
                             </div>
                         </div>
                         <div class="project">
